# zotero-addons-scraper

./: .gitignore  README.md  addon_info.py  addon_infos.json  addon_keys.py  addons  addons.py  convert_addon_from_zchinese.py  fallback_infos.py  file_cache.py  github_operations.py  main.py  moz_addons.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
addons/: 018#zotcard.json  018#zotero-excalidraw.json  1654842532@zotero-ai-assistant  1ywan#zotero-odh.json  4965898@zotero-AI-OCR  ANGJustinl@zotero-plugin-hjfy  AgiNetz#semantic-zotero.json  AlbertShenC#Zotero-Literature-Manager.json  AllanChain#zotero-arxiv-workflow.json  Ares960826#zotero-grouptag.json  Ares960826@zotero-grouptag  Asianfleet@mineru-for-zotero  B3000Kcn#daily-folder-for-zotero.json  B3000Kcn#minimize-zotero-to-tray.json  Babylonehy@zetero-BabelDoc  BaiRuic#BibGenie  BlueBlueKitty@zotero-ainote  Bowen-0x00#zotero-action-cmd.json  BryceWG@zotero-ai-tags  Chartero.json  ChenglongMa#zoplicate.json  Creling#Zotero-Metadata-Scraper.json  Dominic-DallOsto#zotero-annotations-count.json  Dominic-DallOsto#zotero-pin-items.json  Dominic-DallOsto#zotero-reading-list.json  ET06731#zotero-paper2slides.json  FrLars21#ZoteroCitationCountsManager.json  Helloxiaolaodi@Zotero-StaticSync  Huoyuuu@zotero-ai-latex  Huoyuuu@zotero-github-links  ImagonTuTu@zotero-filelink-bridge  ImperialSquid#zotero-zotts.json  Kevin65536@zotero-datacheck-plugin  LoveTheStar7@Zotero-CloseFlow  LuckYang1@PDF-to-md  LuckYang1@zotero2eagle  Lyz-623@JournalLens  ManuelaRunge#Zotitle.json  (+181 more)
(+273 files in other folders)
